Make background image fixed so no white space appears

--- a/src/index.css
+++ b/src/index.css
@@ -105,5 +105,6 @@ body {
     background-image: url("maarten-van-den-heuvel-EzH46XCDQRY-unsplash.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
+    background-attachment: fixed;
 }
 
